--- a/app/views/clients/editProvisioning.html
+++ b/app/views/clients/editProvisioning.html
@@ -90,7 +90,12 @@
 		</table>
 	</div>			
 	</div>
-			    <table>
+
+	<table >
+				<tr valign="top" align="left">
+					<td width="300">
+					
+					<table>
 			    	  <tr>
 						<td>
 			 			 <div class="control-group">
@@ -116,11 +121,7 @@
 					    </td>
 					   </tr>
 					   </table>
-					  <!-- <tr>
-					   <table>
-				<td>
-				 -->
-				<table  ng-repeat="parameterData in parameterDatas">
+					   <table  ng-repeat="parameterData in parameterDatas">
 			
 					    <tr>
 							<td>
@@ -147,20 +148,12 @@
 							</td>
 							</tr>
 							<tr>
-							<!-- <td>
-								<div class="control-group" ng-show="parameterData.paramName == 'IP_ADDRESS'">
-            					<label class="control-label" for="ipAddress">{{ 'label.provisioning.ipaddress' | translate }}</label>
-            					<div class="controls">
-              					 <select ng-model="formData.ipAddress"  ng-options="ipPoolData.ipAddress as ipPoolData.ipAddress for ipPoolData in ipPoolDatas" value="{{ipPoolData.ipAddress}}">
-             					 </select>
-            					</div>
-          						</div>
-							</td> -->
+							
 							<td>
 								<div class="control-group" ng-show="parameterData.paramName == 'IP_ADDRESS'">
             					<label class="control-label" for="ipAddress">{{ 'label.provisioning.ipaddress' | translate }}</label>
                                   <div class="controls">                                  	       
-             						 <input type="text" ng-model="IPAddressObj.ipAddress" name="ipAddress" ng-change="getData(IPAddressObj.ipAddress)"  typeahead="ipPoolData as ipPoolData for ipPoolData in ipPoolDatasData | filter:$viewValue" typeahead-min-length="0">  
+             						 <input type="text" style="width:165px;" ng-model="IPAddressObj.ipAddress" name="ipAddress" ng-change="getData(IPAddressObj.ipAddress)"  typeahead="ipPoolData as ipPoolData for ipPoolData in ipPoolDatasData | filter:$viewValue" typeahead-min-length="0">  
                                  	 <input ng-show="subnetType" type="text" style="width:20px;" id="subnet" ng-model="formData.subnet" maxlength="2"/>
                                   	 <a ng-show="IPAddressType" ng-click="addIpAddresses()">&nbsp;<i class="icon-plus icon-white"></i></a>&nbsp;&nbsp;
                                  	 <div  ng-show="IPAddressType" ng-repeat="addipAddress in addIpAddress">
@@ -182,12 +175,67 @@
           						</div>
 							</td>
 							
-							<!-- </tr>
-							</tr>
-					</table>
-			
-				</td> -->
+					
 			</tr>
+			</table>
+			
+					</td>
+					
+					<td width="1.5" bgcolor="black"><BR></td>
+					
+					<td width="150" valign="top" align="left">
+						<p style="color:black;">&nbsp;&nbsp;&nbsp;Existing Service Parameters</p>
+						
+						<table>
+							<tr>
+								<td>ServiceName: </td>
+								<td>&nbsp;</td>
+								<td>{{exit.servicename}}</td>
+							</tr>
+							<tr>
+								<td>&nbsp;</td>
+								<td>&nbsp;</td>
+								<td>&nbsp;</td>
+							</tr>
+							<tr>
+								<td>GroupName:</td>
+								<td>&nbsp;</td>
+								<td>{{formData.groupName}}</td>
+							</tr>
+							<tr>
+								<td>&nbsp;</td>
+								<td>&nbsp;</td>
+								<td>&nbsp;</td>
+							</tr>
+							<tr>
+								<td>Ip Address:</td>
+								<td>&nbsp;</td>
+								<td style="display: inline-block;" ng-repeat="exitIpAddres in exitIpAddress">{{exitIpAddres}}</td>
+							</tr> 
+							<tr>
+								<td>&nbsp;</td>
+								<td>&nbsp;</td>
+								<td>&nbsp;</td>
+							</tr>
+							<tr>
+								<td>Service:</td>
+								<td>&nbsp;</td>
+								<td>{{formData.paramValue}}</td>
+							</tr>
+							<tr>
+								<td>&nbsp;</td>
+								<td>&nbsp;</td>
+								<td>&nbsp;</td>
+							</tr>
+							<tr>
+								<td>VLAN:</td>
+								<td>&nbsp;</td>
+								<td>{{formData.vLan}}</td>
+							</tr>
+						</table>
+						
+					</td>
+				</tr>
 			</table>
 			
 
