--- a/app/views/clients/createorder.html
+++ b/app/views/clients/createorder.html
@@ -94,8 +94,8 @@
              <table class="table table-striped table-condensed table-hover" ng-style="{ width:450 }">
                 <thead>
                     <tr>
-                        <th class="id">Id&nbsp;<a ng-click="sort_by('id')"></a></th>
-                        <th class="planCode">Plan&nbsp;<a ng-click="sort_by('planCode')"><i class="icon-sort"></i></a></th>
+                        <th class="id">Select&nbsp;<a ng-click="sort_by('id')"></a></th>
+                        <th class="planCode">Plan(Service)&nbsp;<a ng-click="sort_by('planCode')"><i class="icon-sort"></i></a></th>
                          
                         <!-- <th class="field3">Field 3&nbsp;<a ng-click="sort_by('field3')"><i class="icon-sort"></i></a></th>
                         <th class="field4">Field 4&nbsp;<a ng-click="sort_by('field4')"><i class="icon-sort"></i></a></th>
@@ -139,13 +139,13 @@
                         
                     </tr>
                 </tbody>
-            </table>
+             </table>
                <legend>{{'label.prepaidplans' | translate}}</legend>
               <table class="table table-striped table-condensed table-hover" ng-style="{ width:450 }">
                 <thead>
                     <tr>
-                        <th class="id">Id&nbsp;<a ng-click="sort_by('id')"></a></th>
-                        <th class="planCode1">Plan&nbsp;<a ng-click="sort_by('planCode1')"></i></a></th>
+                        <th class="id">Select&nbsp;<a ng-click="sort_by('id')"></a></th>
+                        <th class="planCode1">Plan(Service)&nbsp;<a ng-click="sort_by('planCode1')"></i></a></th>
                          
                         <!-- <th class="field3">Field 3&nbsp;<a ng-click="sort_by('field3')"><i class="icon-sort"></i></a></th>
                         <th class="field4">Field 4&nbsp;<a ng-click="sort_by('field4')"><i class="icon-sort"></i></a></th>
