--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -123,11 +123,11 @@
                       <div class="span7">
                         <table  width="100%" >
                             <tr>
-                              <td width="35%">{{'label.firstname' | translate}}</td>
+                              <td width="35%">{{'label.clinetfirstname' | translate}}</td>
                               <td width="65%">{{client.firstname}}</td>
                             </tr>
                             <tr>
-                              <td>{{'label.lastname' | translate}}</td>
+                              <td>{{'label.clientlastname' | translate}}</td>
                               <td>{{client.lastname}}</td>
                             </tr>
                             <tr>
