--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -25,8 +25,8 @@
               </div>
             </div>
   		      <div class="control-group">
-              <label ng-hide="type == 'corporate'" class="control-label" for="firstname">{{'label.firstname' | translate}}<span class="required">*</span></label>
-              <label ng-show="type == 'corporate'" class="control-label" for="firstname">{{'label.corporate' | translate}}<span class="required">*</span></label>
+              <label ng-hide="formData.entryType == 'ORP'" class="control-label" for="firstname">{{'label.firstname' | translate}}<span class="required">*</span></label>
+              <label ng-show="formData.entryType == 'ORP'" class="control-label" for="firstname">{{'label.corporate' | translate}}<span class="required">*</span></label>
               <div class="controls">
                 <input type="text" id="firstname" name="firstname" ng-model="formData.firstname" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
                 <span  ng-show="createclientform.firstname.$invalid">
@@ -39,24 +39,24 @@
               </div>
             </div>
             <div class="control-group">
-              <label ng-hide="type == 'corporate'" class="control-label" for="middlename">{{'label.middlename' | translate}}</label>
-              <label ng-show="type == 'corporate'" class="control-label" for="firstname">{{'label.corporatedetails' | translate}}</label>
+              <label ng-hide="formData.entryType == 'ORP'" class="control-label" for="lastname">{{'label.lastname' | translate}}<span class="required">*</span></label>
+              <label ng-show="formData.entryType == 'ORP'" class="control-label" for="lastname">{{'label.contactperson' | translate}}<span class="required">*</span></label></label>
               <div class="controls">
-                <input type="text" id="middlename" ng-model="formData.middlename"/>
-              </div>
-            </div>
-            <div class="control-group">
-              <label ng-hide="type == 'corporate'" class="control-label" for="lastname">{{'label.lastname' | translate}}<span class="required">*</span></label>
-              <label ng-show="type == 'corporate'" class="control-label" for="firstname">{{'label.contactperson' | translate}}<span class="required">*</span></label>
-              <div class="controls">
-                <input type="text" id="lastname" name="lastname" ng-model="formData.lastname" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
-                <span  ng-show="createclientform.lastname.$invalid">
+                <input type="text" id="lastname" ng-model="formData.lastname" ng-pattern="/^[a-zA-Z0-9\s]+$/" required ng-minlength=3 late-Validate/>
+               <span  ng-show="createclientform.lastname.$invalid">
                 	<small class="error" ng-show="createclientform.lastname.$error.pattern">alphanumeric and spaces only!</small>
                     <small class="error" ng-show="createclientform.lastname.$error.req">
                         Required Field
                     </small>
                     <small class="error" ng-show="createclientform.lastname.$error.minlength && !createclientform.lastname.$error.req">Name is required at least 3 characters</small>
                 </span>
+              </div>
+            </div>
+            <div class="control-group">
+         <!--     <label ng-hide="type == 'corporate'" class="control-label" for="middlename">{{'label.middlename' | translate}}</label> -->
+              <label class="control-label" for="middlename">{{'label.corporatedetails' | translate}}</label>
+              <div class="controls">
+                <input type="text" id="middlename" name=middlename ng-model="formData.middlename"/>
               </div>
             </div>
             <div class="control-group">
@@ -103,16 +103,16 @@
            <td>
             <div class="control-group">
               <div class="controls">
-               <input type="radio" id="type" ng-model="type" name="entryType" value="individual">
+               <input type="radio" id="type" ng-model="formData.entryType" name="entryType" value="IND">
                &nbsp; Individual &nbsp;&nbsp;
-               <input type="radio" id="type" ng-model="type" name="entryType" value="corporate">
+               <input type="radio" id="type" ng-model="formData.entryType" name="entryType" value="ORP">
                &nbsp; Corporate
               </div>
             </div>
             <div class="control-group">
               <label class="control-label">CUG</span></label>
               <div class="controls">
-                <select ng-model="formData.groupName"  ng-options="groupNameData.groupName as groupNameData.groupName for groupNameData in groupNameDatas" value="{{groupNameDatas.groupName}}">
+                <select ng-model="formData.groupId"  ng-options="groupNameData.id as groupNameData.groupName for groupNameData in groupNameDatas" value="{{groupNameDatas.groupName}}">
                 <option  value="">None</option>
                 </select>
               </div>
