--- a/app/views/administration/organization.html
+++ b/app/views/administration/organization.html
@@ -27,7 +27,7 @@
 	      <p class="list-group-item-text">Define the Message Templates</p>
 	    </a>
 	     <a class="list-group-item" href="#/ipPooling">
-	      <h4 class="list-group-item-heading"><i class="icon-list icon-large"></i>&nbsp;&nbsp;IP Pool</h4>
+	      <h4 class="list-group-item-heading"><i class="icon-list icon-large"></i>&nbsp;&nbsp;IP Management</h4>
 	      <p class="list-group-item-text">Create the IP Address Pools</p>
 	    </a>
 	     <a class="list-group-item" href="#/groupsDetails" ng-show="PermissionService.showMenu('READ_GROUPS')">
