officeId addded to simple activation

--- a/app/views/clients/clients.html
+++ b/app/views/clients/clients.html
@@ -5,8 +5,8 @@
     </ul>
     <div class="pull-right">
         <a  ng-show="PermissionService.showMenu('CREATE_CLIENT')" href="#/createclient" class="btn btn-primary"><i class="icon-plus icon-white"></i> Create Client</a>
-          <a href="#/createclientnewwizard" class="btn btn-primary"
-          		ng-show="PermissionService.showMenu('ACTIVATIONPROCESS_ACTIVATE')"><i class="icon-plus icon-white"></i> New Activation</a>
+          <!-- <a href="#/createclientnewwizard" class="btn btn-primary"
+          		ng-show="PermissionService.showMenu('ACTIVATIONPROCESS_ACTIVATE')"><i class="icon-plus icon-white"></i> New Activation</a> -->
         <a ng-show="PermissionService.showMenu('ACTIVATIONPROCESS_ACTIVATE')" href="#/createsimpleActivation" class="btn btn-primary"><i class="icon-plus icon-white"></i>Simple Activation</a>
     </div>
 </div>
