inventory,codes,datauploads,tickets changes

--- a/app/views/crm/tickets/editTicket.html
+++ b/app/views/crm/tickets/editTicket.html
@@ -64,7 +64,7 @@
 		<label ng-hide="errorStatus" ng-repeat="error in errorDetails">{{error.code | translate}}</label>
 	    </div>
 	<fieldset>
-		<legend>{{'label.editticket' | translate}}</legend>
+		<legend>Add Comment</legend>
 		<table width="100%">
 			<tr>
 				<td width="50%">
