--- a/app/views/system/addcode.html
+++ b/app/views/system/addcode.html
@@ -19,6 +19,12 @@
                 <input type="text" id="codename" ng-model="formData.name">
             </div>
         </div><br>
+        <div class="control-group">
+	          	<label class="control-label">Description</label>
+		        <div class="controls">
+		          <textarea ng-model="formData.description"></textarea>
+		        </div>
+	    </div>
         <div class="offset3">
             <a href="#/codes"><button id="cancel" class="btn">{{'label.cancel' | translate}}</button></a>
             <button id="submit" type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
